--- a/libpay-stripe-testkit/pom.xml
+++ b/libpay-stripe-testkit/pom.xml
@@ -2,12 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wix.pay</groupId>
     <artifactId>libpay-stripe-testkit</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>libpay test-kit for Stripe payment</name>
+    <name>libpay Stripe payment gateway adapter test-kit</name>
     <description>libpay test-kit for Stripe payment gateway</description>
+
+
+    <parent>
+        <groupId>com.wix.pay</groupId>
+        <artifactId>libpay-stripe-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../libpay-stripe-parent</relativePath>
+    </parent>
+
 
     <developers>
         <developer>
@@ -32,13 +38,6 @@
             </roles>
         </developer>
     </developers>
-
-    <parent>
-        <groupId>com.wix.pay</groupId>
-        <artifactId>libpay-stripe-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-		<relativePath>../libpay-stripe-parent</relativePath>
-    </parent>
 
     <dependencies>
         <dependency>
