--- a/libpay-stripe/pom.xml
+++ b/libpay-stripe/pom.xml
@@ -2,18 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.wix.pay</groupId>
     <artifactId>libpay-stripe</artifactId>
-    <name>libpay Stripe payment gateway adapter</name>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Stripe payment gateway</name>
     <description>Stripe payment gateway</description>
-
-
-    <parent>
-        <groupId>com.wix.pay</groupId>
-        <artifactId>libpay-stripe-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../libpay-stripe-parent</relativePath>
-    </parent>
-
 
     <developers>
         <developer>
@@ -38,6 +32,13 @@
             </roles>
         </developer>
     </developers>
+
+    <parent>
+        <groupId>com.wix.pay</groupId>
+        <artifactId>libpay-stripe-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+		<relativePath>../libpay-stripe-parent</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
