--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.wix.pay</groupId>
     <artifactId>libpay-stripe-all</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>libpay Stripe payment gateway adapter aggregator</name>
+    <name>libpay module for Stripe payment gateway</name>
     <description>libpay module for Stripe payment gateway</description>
-	
 
     <parent>
         <groupId>com.wix.pay</groupId>
@@ -15,6 +16,12 @@
 		<relativePath>libpay-stripe-parent</relativePath>
     </parent>
 
+    <modules>
+        <module>libpay-stripe-parent</module>
+        <module>libpay-stripe</module>
+        <module>libpay-stripe-common</module>
+        <module>libpay-stripe-testkit</module>
+    </modules>
 
     <scm>
         <url>https://github.com/wix/libpay-stripe</url>
@@ -22,12 +29,4 @@
         <developerConnection>scm:git:git@github.com:wix/libpay-stripe.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
-
-
-    <modules>
-        <module>libpay-stripe-parent</module>
-        <module>libpay-stripe</module>
-        <module>libpay-stripe-common</module>
-        <module>libpay-stripe-testkit</module>
-    </modules>
 </project>
