--- a/libpay-stripe-common/pom.xml
+++ b/libpay-stripe-common/pom.xml
@@ -42,6 +42,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.library.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.wix.pay</groupId>
             <artifactId>libpay-api</artifactId>
             <version>${com.wix.pay.libpay.version}</version>
