--- a/libpay-stripe-parent/pom.xml
+++ b/libpay-stripe-parent/pom.xml
@@ -57,8 +57,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <scala.dependencies.version>2.11</scala.dependencies.version>
-        <scala.library.version>2.11.7</scala.library.version>
-        <com.wix.hoopoe.http.version>0.0.1</com.wix.hoopoe.http.version>
+        <scala.library.version>2.11.8</scala.library.version>
+        <com.wix.http.testkit.version>0.1.15</com.wix.http.testkit.version>
         <org.specs2.version>3.6.1</org.specs2.version>
         <com.google.http.client.version>1.22.0</com.google.http.client.version>
         <org.json4js.version>3.4.0</org.json4js.version>
