--- a/libpay-stripe-testkit/pom.xml
+++ b/libpay-stripe-testkit/pom.xml
@@ -47,9 +47,9 @@
             <version>${com.wix.pay.libpay.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.wix.hoopoe.http</groupId>
+            <groupId>com.wix</groupId>
             <artifactId>http-testkit_${scala.dependencies.version}</artifactId>
-            <version>${com.wix.hoopoe.http.version}</version>
+            <version>${com.wix.http.testkit.version}</version>
         </dependency>
         <dependency>
             <groupId>com.stripe</groupId>
